revision to improve Save As function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="newmenu">
         <button id="openSliderbtn" title="Open Files Listing/Search Panel"><img src="images/glyphicons-115-list_rev.png"></button>
         <input id="docfilename" type="text" value="doc.odt" />
-        <button id="savefilebtn" title="Save File"><img src="images/saveas.png"></button>
+        <button id="savefilebtn" title="Save File"><img src="images/glyphicons-415-disk-save_rev.png"></button>
+        <button id="saveasfilebtn" title="Save As File"><img src="images/glyphicons-511-duplicate_rev.png"></button>
         <button id="reloadbtn" title="Reset Text Editor"><img src="images/glyphicons-82-refresh_rev.png"></button>
         <button id="resetuserbtn" title="Reset User Name Next Session"><img src="images/glyphicons-524-user-asterisk_rev.png"></button>
     </div>
