--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="openSliderbtn" title="Open Files Listing/Search Panel"><img src="images/glyphicons-115-list_rev.png"></button>
         <input id="docfilename" type="text" value="doc.odt" />
         <button id="savefilebtn" title="Save File"><img src="images/glyphicons-415-disk-save_rev.png"></button>
-        <button id="saveasfilebtn" title="Save As File"><img src="images/glyphicons-511-duplicate_rev.png"></button>
+        <button id="saveasfilebtn" title="Save As File"><img id="saveasfileimg" src="images/glyphicons-511-duplicate_dim_rev.png"></button>
         <button id="reloadbtn" title="Reset Text Editor"><img src="images/glyphicons-82-refresh_rev.png"></button>
         <button id="resetuserbtn" title="Reset User Name Next Session"><img src="images/glyphicons-524-user-asterisk_rev.png"></button>
     </div>
@@ -39,7 +39,7 @@
             <label for="searchname"><input type="radio" name="searchwhat" id="searchname" checked /> Filename</label>
             <label for="searchtext"><input type="radio" name="searchwhat" id="searchtext" /> Filename/Text</label>
             <br>
-            <button id="resetmhtexteditorbtn" title="Remove All Docs From Listing"><img src="images/glyphicons-198-remove-circle_rev.png"></button>
+            <button id="resetmhtexteditorbtn" title="Delete All Docs"><img src="images/glyphicons-198-remove-circle_rev.png">Delete All</button>
             <div id="fileslisting">
             </div>
             <div id="filesessionmsg">NOTE: Download all files before ending this session!</div>
@@ -51,6 +51,9 @@
     </div>
 
     <script src="js/wodo_script.js" type="text/javascript" charset="utf-8"></script>
- 
+
+     <script>
+     var saveasfileimg = document.getElementById("saveasfileimg");
+     </script>
   </body>
 </html>
