--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <div id="editorContainer" style="width:100%; height:100%; margin:0px; padding:0px">
+    <div id="editorContainer">
     </div>
 
     <script src="js/wodo_script.js" type="text/javascript" charset="utf-8"></script>
